upgrade to Java 22